--- a/index.html
+++ b/index.html
@@ -8,16 +8,10 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li>Header</li>
-                <li>Header</li>
-                <li>Header</li>
-                <li>Header</li>
-            </ul>
-        </nav>
-    </header>
+    <button>Click</button>
+    <div class="box1">
+    </div>
+    <div class="box2"></div>
     
 </body>
 </html>
